web: re-fix sidebar colour in dark mode

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -158,4 +158,8 @@ select[multiple] {
     .pf-c-modal-box__footer {
         background-color: var(--ak-dark-background-light);
     }
+    /* sidebar */
+    .pf-c-nav {
+        background-color: var(--ak-dark-background-light);
+    }
 }
